--- a/jvm-getter/Cargo.toml
+++ b/jvm-getter/Cargo.toml
@@ -19,5 +19,11 @@ goblin = { version = "0.9", default-features = false, features = [
     "endian_fd",
 ] }
 jni-sys = "0.3"
-libc = "0.2"
-libloading = "0.8"
+
+[target.'cfg(target_family = "unix")'.dependencies]
+libc = { version = "0.2", default-features = false }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows-sys = { version = "0.60", default-features = false, features = [
+    "Win32_System_LibraryLoader",
+] }
