--- a/jvm-getter-tests/Cargo.toml
+++ b/jvm-getter-tests/Cargo.toml
@@ -16,6 +16,10 @@ crate-type = ["cdylib"]
 
 [dependencies]
 jni = "0.21"
-jvm-getter = { path = "../jvm-getter" }
+jvm-getter = { path = "../jvm-getter", default-features = false }
 tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
 uniffi = { version = "=0.28.3", features = ["tokio"] }
+
+[features]
+sym-search = ["jvm-getter/sym-search"]
+art-parsing = ["jvm-getter/art-parsing"]
