--- a/jvm-getter/Cargo.toml
+++ b/jvm-getter/Cargo.toml
@@ -17,7 +17,7 @@ goblin = { version = "0.9", default-features = false, features = [
     "elf64",
     "elf32",
     "endian_fd",
-] }
+], optional = true }
 jni-sys = "0.3"
 
 [target.'cfg(target_family = "unix")'.dependencies]
@@ -29,5 +29,11 @@ windows-sys = { version = "0.60", default-features = false, features = [
 ] }
 
 [features]
-default = ["alloc"]
+default = ["alloc", "sym-search", "art-parsing"]
 alloc = []
+
+sym-search = ["sym-search-unix", "sym-search-windows"]
+sym-search-unix = []
+sym-search-windows = []
+
+art-parsing = ["dep:goblin"]
