--- a/jvm-getter/Cargo.toml
+++ b/jvm-getter/Cargo.toml
@@ -17,7 +17,23 @@ goblin = { version = "0.9", default-features = false, features = [
     "elf64",
     "elf32",
     "endian_fd",
-] }
+], optional = true }
 jni-sys = "0.3"
-libc = "0.2"
-libloading = "0.8"
+
+[target.'cfg(target_family = "unix")'.dependencies]
+libc = { version = "0.2", default-features = false }
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows-sys = { version = "0.60", default-features = false, features = [
+    "Win32_System_LibraryLoader",
+] }
+
+[features]
+default = ["alloc", "sym-search", "art-parsing"]
+alloc = []
+
+sym-search = ["sym-search-unix", "sym-search-windows"]
+sym-search-unix = []
+sym-search-windows = []
+
+art-parsing = ["dep:goblin"]
